# tools

./: .editorconfig  .gitignore  CHANGES  CHANGES.TITLE  LICENSE  Makefile  README.md  adt.py  adt_conf.py  build.cmd  build.sh  clean.cmd  clean.sh  common.cmd  common.sh  docgen-pack.cmd  docgen-pack.sh  docgen.cmd  docgen.sh  increment.cmd  increment.sh  localize.cmd  localize.sh  pack.cmd  pack.sh  push.cmd  push.sh  pyproject.toml  requirements.txt
.github/workflows/: build-ppa-package-with-lintian.yml  build-ppa-package.yml  build-ppa.yml  build.yml  codeql.yml  pushamend.yml  pushppa.yml  release.yml  script-integrity.yml  syncmirror.yml
common/fragments/: frag_dnresxlang.py  frag_dnresxlang_parts.py  frag_gitactions.py  frag_gitprogress.py  frag_gitreport.py  frag_manual.py  frag_projecttools.py
common/hooks/: h_branches.py  h_build.py  h_clean.py  h_commit.py  h_commits.py  h_dnresxlang.py  h_fetch.py  h_gendocs.py  h_hardclean.py  h_increment.py  h_intreport.py  h_liquidize.py  h_listprojs.py  h_packbin.py  h_packdocs.py  h_pull.py  h_push.py  h_pushbin.py  h_reset.py  h_revert.py  h_status.py  h_tags.py  h_test.py  h_updatedeps.py  h_vendorize.py
debian/: adt.docs  changelog  control  copyright  rules
scripts/: git_standalone_actions.py  proj_actions.py  standalone_actions.py
src/adt/: adt.1  adt.py  adt_conf.py
testsuite/: README.md
testsuite/vnd/: vendor-build.cmd  vendor-clean.cmd  vendor-docgen.cmd  vendor-docpack.cmd  vendor-increment.cmd  vendor-localize.cmd  vendor-pack.cmd  vendor-postbuild.cmd  vendor-postclean.cmd  (+16 more)
testsuite2/: README.md
(+60 files in other folders)
